[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/InventoryHUD.gd" type="Script" id=1]
[ext_resource path="res://Cubes/Assets/01_c_demoniaco.jpg" type="Texture" id=2]

[node name="InventoryHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Control" parent="."]
margin_left = 5.0
margin_top = 150.0
margin_right = 123.0
margin_bottom = 588.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuneA" type="TextureButton" parent="Items"]
visible = false
margin_left = 5.0
margin_top = 42.0
margin_right = 55.0
margin_bottom = 92.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuneB" type="TextureButton" parent="Items"]
visible = false
margin_left = 5.0
margin_top = 97.0
margin_right = 55.0
margin_bottom = 147.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuneC" type="TextureButton" parent="Items"]
visible = false
margin_left = 5.0
margin_top = 152.0
margin_right = 55.0
margin_bottom = 202.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuneD" type="TextureButton" parent="Items"]
visible = false
margin_left = 5.0
margin_top = 207.0
margin_right = 55.0
margin_bottom = 257.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuneE" type="TextureButton" parent="Items"]
visible = false
margin_left = 5.0
margin_top = 262.0
margin_right = 55.0
margin_bottom = 312.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuneF" type="TextureButton" parent="Items"]
visible = false
margin_left = 5.0
margin_top = 317.0
margin_right = 55.0
margin_bottom = 367.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CubeBag" type="TextureButton" parent="Items"]
visible = false
margin_left = 5.0
margin_top = 385.0
margin_right = 55.0
margin_bottom = 435.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellBook" type="TextureButton" parent="Items"]
visible = false
margin_left = 65.0
margin_top = 385.0
margin_right = 115.0
margin_bottom = 435.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
